# isolated

./: .gitignore  .gitmodules  README.md  TODO.md  isolated.sln  isolated.vcxproj  isolated.vcxproj.filters
data/: controls.ini  settings.ini
extlib/soil/: CMakeLists.txt
src/: CMakeLists.txt  Color.cpp  Color.h  Config.cpp  Config.h  DebugConsole.cpp  DebugConsole.h  DebugFont.cpp  DebugFont.h  Entity.h  FillRules.cpp  FillRules.h  Game.cpp  Game.h  Input.cpp  Input.h  Main.cpp  Player.cpp  Player.h  Scene.cpp  Scene.h  SceneGameSetup.cpp  SceneGameSetup.h  SceneLocalGame.cpp  SceneLocalGame.h  Time.h  Vector.h  Wall.cpp  Wall.h
